--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Kurt Farrell"
 title_separator          : "-"
 name                     : &name "Kurt Farrell"
 description              : &description "personal description"
-url                      : https://farrell120/kurt-farrell.github.io
+url                      : https://farrell120.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "farrell120/kurt-farrell.github.io"
 
